--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -101,7 +101,7 @@ ol li { list-style: decimal; }
     </tr>
     <tr>
       <td align="center" class="chg">なし</td>
-      <td>スクリプトに変更があり衝突いて、新版にそのままは適用が難しい。</td>
+      <td>スクリプトに変更に衝突があり、新版にそのままの適用するのが難しい。</td>
     </tr>
     </table>
 
@@ -143,7 +143,20 @@ ol li { list-style: decimal; }
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
-  <dd>2006/07/19 alpha バージョン</dd>
+  <dd>2007/06/21 update 0.82</dd>
+  <dd>2007/06/21 非活性のモジュールの扱いを修正</dd>
+  <dd>2007/06/20 XOOPS Cube Legacy で動作するように変更</dd>
+  <dd>2007/05/20 バージョン番号の扱いの障害を修正 (数値で 1.0 を設定した場合)</dd>
+  <dd>2007/05/16 不規則なバージョン番号に対応</dd>
+  <dd>2007/03/01 ドメイン名生成でパス '/' を許すように修正</dd>
+  <dd>2007/01/04 update 0.81</dd>
+  <dd>2006/12/05 update 0.8</dd>
+  <ul>
+    <li>セッションを使ったカスタマイズ配信のサポート</li>
+　  <li>複製モジュールに対応</li>
+　  <li>細かな不具合を修正</li>
+  </ul>
+  <dd>2006/07/19 alpha バージョン (0.74)</dd>
 </dl>
 
   <a name="scriptupdate"></a><h2>合同会社スクリプトアップデートについて</h2>
@@ -153,6 +166,6 @@ ol li { list-style: decimal; }
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.3 2006/08/01 07:01:33 nobu Exp $</div>
+<div>$Id: help.html,v 1.4 2007/06/21 14:18:07 nobu Exp $</div>
 </body>
 </html>
