fix base system conflict

--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -143,6 +143,8 @@ ol li { list-style: decimal; }
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dd>2007/06/22 update 0.83</dd>
+  <dd>2007/06/22 ベースシステムの衝突障害を修正</dd>
   <dd>2007/06/21 update 0.82</dd>
   <dd>2007/06/21 非活性のモジュールの扱いを修正</dd>
   <dd>2007/06/20 XOOPS Cube Legacy で動作するように変更</dd>
@@ -166,6 +168,6 @@ ol li { list-style: decimal; }
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.4 2007/06/21 14:18:07 nobu Exp $</div>
+<div>$Id: help.html,v 1.5 2007/06/21 18:39:53 nobu Exp $</div>
 </body>
 </html>
