--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -143,6 +143,9 @@ ol li { list-style: decimal; }
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dd>2007/07/09 update 0.84</dd>
+  <dd>2007/07/09 登録画面のモジュール並びを変更</dd>
+  <dd>2007/07/09 登録変更で更新情報キャッシュをクリアする</dd>
   <dd>2007/07/07 バージョンが一致しない場合の代替を検索する</dd>
   <dd>2007/06/23 モジュール更新状態の表示を行う</dd>
   <dd>2007/06/23 XOOPS_TRUST_ROOT (代替root) 機構を追加</dd>
@@ -171,6 +174,6 @@ ol li { list-style: decimal; }
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.6 2007/07/09 05:00:04 nobu Exp $</div>
+<div>$Id: help.html,v 1.7 2007/07/09 08:58:10 nobu Exp $</div>
 </body>
 </html>
