change cache on DB

--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -143,6 +143,11 @@ ol li { list-style: decimal; }
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dd>2007/07/15 キャッシュをテーブルで行うように変更</dd>
+  <dd>2007/07/13 バックアップ復旧の有効期限の扱い障害を修正</dd>
+  <dd>2007/07/13 リネームされたモジュールの更新に対応</dd>
+  <dd>2007/07/10 保存された古い更新情報を初期状態でチェックする</dd>
+  <dd>2007/07/09 オプション選択で全部オフにできない障害を修正</dd>
   <dd>2007/07/09 update 0.84</dd>
   <dd>2007/07/09 登録画面のモジュール並びを変更</dd>
   <dd>2007/07/09 登録変更で更新情報キャッシュをクリアする</dd>
@@ -174,6 +179,6 @@ ol li { list-style: decimal; }
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.7 2007/07/09 08:58:10 nobu Exp $</div>
+<div>$Id: help.html,v 1.8 2007/07/16 05:18:30 nobu Exp $</div>
 </body>
 </html>
