--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -143,6 +143,8 @@ ol li { list-style: decimal; }
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dd>2007/07/15 update 0.85</dd>
+  <dd>2007/07/15 更新直後の表示がずれる障害を修正</dd>
   <dd>2007/07/15 キャッシュをテーブルで行うように変更</dd>
   <dd>2007/07/13 バックアップ復旧の有効期限の扱い障害を修正</dd>
   <dd>2007/07/13 リネームされたモジュールの更新に対応</dd>
@@ -179,6 +181,6 @@ ol li { list-style: decimal; }
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.8 2007/07/16 05:18:30 nobu Exp $</div>
+<div>$Id: help.html,v 1.9 2007/07/16 10:50:36 nobu Exp $</div>
 </body>
 </html>
