--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -143,6 +143,9 @@ ol li { list-style: decimal; }
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dd>2007/08/04 update 0.86</dd>
+  <dd>2007/08/04 オプションでパッケージ情報を表示する</dd>
+  <dd>2007/08/04 XOOPS_TRUST_PATH が一部働かない問題を修正</dd>
   <dd>2007/07/15 update 0.85</dd>
   <dd>2007/07/15 更新直後の表示がずれる障害を修正</dd>
   <dd>2007/07/15 キャッシュをテーブルで行うように変更</dd>
@@ -181,6 +184,6 @@ ol li { list-style: decimal; }
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.9 2007/07/16 10:50:36 nobu Exp $</div>
+<div>$Id: help.html,v 1.10 2007/08/04 08:48:36 nobu Exp $</div>
 </body>
 </html>
