--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -15,11 +15,16 @@ td,th { padding: 4px; background: #e8e8e8;}
 .mod { color: #f08; }
 pre { color: #620; }
 em { color: #084; font-weight: bold;}
-.note { color: #800000; }
 ol li { list-style: decimal; }
 </style>
 </head>
 <body>
+<style>
+li.rel { list-style: none; font-weight: bold; }
+ul#changes { text-indent: 1em;}
+.note { color: #800000; }
+</style>
+
   <h1>XOOPS アップデート</h1>
 
   <p>XoopsUpdate は、XOOPS 本体およびモジュールの更新作業を支援するシステムです。
@@ -143,38 +148,76 @@ ol li { list-style: decimal; }
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
-  <dd>2007/08/04 update 0.86</dd>
-  <dd>2007/08/04 オプションでパッケージ情報を表示する</dd>
-  <dd>2007/08/04 XOOPS_TRUST_PATH が一部働かない問題を修正</dd>
-  <dd>2007/07/15 update 0.85</dd>
-  <dd>2007/07/15 更新直後の表示がずれる障害を修正</dd>
-  <dd>2007/07/15 キャッシュをテーブルで行うように変更</dd>
-  <dd>2007/07/13 バックアップ復旧の有効期限の扱い障害を修正</dd>
-  <dd>2007/07/13 リネームされたモジュールの更新に対応</dd>
-  <dd>2007/07/10 保存された古い更新情報を初期状態でチェックする</dd>
-  <dd>2007/07/09 オプション選択で全部オフにできない障害を修正</dd>
-  <dd>2007/07/09 update 0.84</dd>
-  <dd>2007/07/09 登録画面のモジュール並びを変更</dd>
-  <dd>2007/07/09 登録変更で更新情報キャッシュをクリアする</dd>
-  <dd>2007/07/07 バージョンが一致しない場合の代替を検索する</dd>
-  <dd>2007/06/23 モジュール更新状態の表示を行う</dd>
-  <dd>2007/06/23 XOOPS_TRUST_ROOT (代替root) 機構を追加</dd>
-  <dd>2007/06/22 update 0.83</dd>
-  <dd>2007/06/22 ベースシステムの衝突障害を修正</dd>
-  <dd>2007/06/21 update 0.82</dd>
-  <dd>2007/06/21 非活性のモジュールの扱いを修正</dd>
-  <dd>2007/06/20 XOOPS Cube Legacy で動作するように変更</dd>
-  <dd>2007/05/20 バージョン番号の扱いの障害を修正 (数値で 1.0 を設定した場合)</dd>
-  <dd>2007/05/16 不規則なバージョン番号に対応</dd>
-  <dd>2007/03/01 ドメイン名生成でパス '/' を許すように修正</dd>
-  <dd>2007/01/04 update 0.81</dd>
-  <dd>2006/12/05 update 0.8</dd>
-  <ul>
-    <li>セッションを使ったカスタマイズ配信のサポート</li>
-　  <li>複製モジュールに対応</li>
-　  <li>細かな不具合を修正</li>
-  </ul>
-  <dd>2006/07/19 alpha バージョン (0.74)</dd>
+  <dt>2007/08/04 update 0.87</dt>
+  <dd>
+    <ul>
+      <li>複製モジュールで更新時に競合した場合の障害を修正</li>
+      <li>update_cache テーブルの登録忘れを修正</li>
+      <li>更新処理の作業ディレクトリを削除する</li>
+    </ul>
+  </dd>
+  <dt>2007/08/04 update 0.86</dt>
+  <dd>
+    <ul>
+  <li class="rel"></li>
+  <li>オプションでパッケージ情報を表示する</li>
+  <li>XOOPS_TRUST_PATH が一部働かない問題を修正</li>
+    </ul>
+  </dd>
+  <dt>2007/07/15 update 0.85</dt>
+  <dd>
+    <ul>
+      <li class="rel"></li>
+      <li>更新直後の表示がずれる障害を修正</li>
+      <li>キャッシュをテーブルで行うように変更</li>
+      <li>バックアップ復旧の有効期限の扱い障害を修正</li>
+      <li>リネームされたモジュールの更新に対応</li>
+      <li>保存された古い更新情報を初期状態でチェックする</li>
+      <li>オプション選択で全部オフにできない障害を修正</li>
+    </ul>
+  </dd>
+  <dt>2007/07/09 update 0.84</dt>
+  <dd>
+    <ul>
+      <li class="rel"></li>
+      <li>登録画面のモジュール並びを変更</li>
+      <li>登録変更で更新情報キャッシュをクリアする</li>
+      <li>バージョンが一致しない場合の代替を検索する</li>
+      <li>モジュール更新状態の表示を行う</li>
+      <li>XOOPS_TRUST_ROOT (代替root) 機構を追加</li>
+    </ul>
+  </dd>
+  <dt>2007/06/22 update 0.83</dt>
+  <dd>
+    <ul>
+      <li>ベースシステムの衝突障害を修正</li>
+    </ul>
+  </dd>
+  <dt>2007/06/21 update 0.82</dt>
+  <dd>
+    <ul>
+      <li>非活性のモジュールの扱いを修正</li>
+      <li>XOOPS Cube Legacy で動作するように変更</li>
+      <li>バージョン番号の扱いの障害を修正 (数値で 1.0 を設定した場合)</li>
+      <li>不規則なバージョン番号に対応</li>
+      <li>ドメイン名生成でパス '/' を許すように修正</li>
+    </ul>
+  </dd>
+  <dt>2007/01/04 update 0.81</dt>
+  <dd>
+    <ul>
+      <li>更新障害の修正</li>
+    </ul>
+  </dd>
+  <dt>2006/12/05 update 0.8</dt>
+  <dd>
+    <ul>
+      <li>セッションを使ったカスタマイズ配信のサポート</li>
+      　<li>複製モジュールに対応</li>
+      　<li>細かな不具合を修正</li>
+    </ul>
+  </dd>
+  <dt>2006/07/19 update 0.74 (alpha)</dt>
 </dl>
 
   <a name="scriptupdate"></a><h2>合同会社スクリプトアップデートについて</h2>
@@ -184,6 +227,6 @@ ol li { list-style: decimal; }
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.10 2007/08/04 08:48:36 nobu Exp $</div>
+<div>$Id: help.html,v 1.11 2007/10/29 08:20:33 nobu Exp $</div>
 </body>
 </html>
