--- a/language/english/help.html
+++ b/language/english/help.html
@@ -157,6 +157,13 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>Changes</h2>
 
 <dl>
+  <dt>2008/01/06 update 0.88</dt>
+  <dd>
+    <ul>
+      <li>fix field type from text to longblob in database</li>
+      <li>confirm getting files used by hash</li>
+    </ul>
+  </dd>
   <dt>2007/10/30 update 0.87</dt>
   <dd>
     <ul>
@@ -236,6 +243,6 @@ ul#changes { text-indent: 1em;}
     This module developed and distributed by ScriptUpdate LLC</p>
 
 <hr>
-<div>$Id: help.html,v 1.1 2007/11/18 18:04:32 nobu Exp $</div>
+<div>$Id: help.html,v 1.2 2008/01/06 09:14:36 nobu Exp $</div>
 </body>
 </html>
