--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -148,6 +148,13 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dt>2008/01/06 update 0.88</dt>
+  <dd>
+    <ul>
+      <li>DB の text 型を longblob 型に変更</li>
+      <li>更新ファイルの同一性をハッシュで確認するように変更</li>
+    </ul>
+  </dd>
   <dt>2007/10/30 update 0.87</dt>
   <dd>
     <ul>
@@ -227,6 +234,6 @@ ul#changes { text-indent: 1em;}
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.13 2007/11/18 18:04:32 nobu Exp $</div>
+<div>$Id: help.html,v 1.14 2008/01/06 09:14:36 nobu Exp $</div>
 </body>
 </html>
