--- a/language/english/help.html
+++ b/language/english/help.html
@@ -157,6 +157,14 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>Changes</h2>
 
 <dl>
+  <dt>2008/01/09 update 0.89</dt>
+  <dd>
+    <ul>
+      <li>Auto replace EOL when apply stored diff</li>
+      <li>fix update info unsense when local and network info using both</li>
+      <li>Register packages info back to same page</li>
+    </ul>
+  </dd>
   <dt>2008/01/06 update 0.88</dt>
   <dd>
     <ul>
@@ -243,6 +251,6 @@ ul#changes { text-indent: 1em;}
     This module developed and distributed by ScriptUpdate LLC</p>
 
 <hr>
-<div>$Id: help.html,v 1.2 2008/01/06 09:14:36 nobu Exp $</div>
+<div>$Id: help.html,v 1.3 2008/01/09 08:54:01 nobu Exp $</div>
 </body>
 </html>
