--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -148,6 +148,14 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dt>2008/01/09 update 0.89</dt>
+  <dd>
+    <ul>
+      <li>保存差分適用時に EOL を検知して変換する</li>
+      <li>ネットワークとローカルの更新情報を併用した場合の障害を修正</li>
+      <li>更新情報の操作で同ページへ戻るように変更</li>
+    </ul>
+  </dd>
   <dt>2008/01/06 update 0.88</dt>
   <dd>
     <ul>
@@ -234,6 +242,6 @@ ul#changes { text-indent: 1em;}
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.14 2008/01/06 09:14:36 nobu Exp $</div>
+<div>$Id: help.html,v 1.15 2008/01/09 08:54:01 nobu Exp $</div>
 </body>
 </html>
