--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -148,6 +148,15 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dt>2008/02/25 update 0.90</dt>
+  <dd>
+    <ul>
+      <li>新版との差分表示の方向を変更</li>
+      <li>ディレクトリ名変更で差分が正しく行われない障害を修正</li>
+      <li>新版検知が正しく行われない障害を修正</li>
+      <li>代表ファイルの選択方法を変更</li>
+    </ul>
+  </dd>
   <dt>2008/01/09 update 0.89</dt>
   <dd>
     <ul>
@@ -242,6 +251,6 @@ ul#changes { text-indent: 1em;}
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.15 2008/01/09 08:54:01 nobu Exp $</div>
+<div>$Id: help.html,v 1.16 2008/02/25 15:14:04 nobu Exp $</div>
 </body>
 </html>
