--- a/language/english/help.html
+++ b/language/english/help.html
@@ -157,6 +157,15 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>Changes</h2>
 
 <dl>
+  <dt>2008/02/25 update 0.90</dt>
+  <dd>
+    <ul>
+      <li>Destination change differ to newer version</li>
+      <li>Fix problem when directory name changed</li>
+      <li>Fix newer version miss sense</li>
+      <li>Change delegate file select method</li>
+    </ul>
+  </dd>
   <dt>2008/01/09 update 0.89</dt>
   <dd>
     <ul>
@@ -230,7 +239,7 @@ ul#changes { text-indent: 1em;}
   <dt>2007/01/04 update 0.81</dt>
   <dd>
     <ul>
-      <li>fix update failer</li>
+      <li>fix update failure</li>
     </ul>
   </dd>
   <dt>2006/12/05 update 0.8</dt>
@@ -251,6 +260,6 @@ ul#changes { text-indent: 1em;}
     This module developed and distributed by ScriptUpdate LLC</p>
 
 <hr>
-<div>$Id: help.html,v 1.3 2008/01/09 08:54:01 nobu Exp $</div>
+<div>$Id: help.html,v 1.4 2008/02/25 15:14:03 nobu Exp $</div>
 </body>
 </html>
