fix translation forgot.

--- a/language/english/help.html
+++ b/language/english/help.html
@@ -106,7 +106,7 @@ ul#changes { text-indent: 1em;}
       <td>only CRLF add in eof</td>
     </tr>
     <tr>
-      <td align="center" class="same">なし</td>
+      <td align="center" class="same">(None)</td>
       <td>Update in newer version</td>
     </tr>
     <tr>
@@ -114,7 +114,7 @@ ul#changes { text-indent: 1em;}
       <td>Modify in current, no conflict in newer version file.</td>
     </tr>
     <tr>
-      <td align="center" class="chg">なし</td>
+      <td align="center" class="chg">(None)</td>
       <td>There is conflict changes. You need consider marge changes.</td>
     </tr>
     </table>
@@ -260,6 +260,6 @@ ul#changes { text-indent: 1em;}
     This module developed and distributed by ScriptUpdate LLC</p>
 
 <hr>
-<div>$Id: help.html,v 1.4 2008/02/25 15:14:03 nobu Exp $</div>
+<div>$Id: help.html,v 1.5 2008/10/05 05:22:49 nobu Exp $</div>
 </body>
 </html>
