--- a/language/english/help.html
+++ b/language/english/help.html
@@ -157,6 +157,13 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>Changes</h2>
 
 <dl>
+  <dt>2010/01/09 update 0.91</dt>
+  <dd>
+    <ul>
+      <li>support XOOPS 2.0 later</li>
+      <li>using altsys module if exist</li>
+    </ul>
+  </dd>
   <dt>2008/02/25 update 0.90</dt>
   <dd>
     <ul>
@@ -260,6 +267,6 @@ ul#changes { text-indent: 1em;}
     This module developed and distributed by ScriptUpdate LLC</p>
 
 <hr>
-<div>$Id: help.html,v 1.5 2008/10/05 05:22:49 nobu Exp $</div>
+<div>$Id: help.html,v 1.6 2010/01/09 07:44:28 nobu Exp $</div>
 </body>
 </html>
