--- a/language/japanese/help.html
+++ b/language/japanese/help.html
@@ -148,6 +148,13 @@ ul#changes { text-indent: 1em;}
   <a name="changes"></a><h2>変更履歴</h2>
 
 <dl>
+  <dt>2010/01/09 update 0.91</dt>
+  <dd>
+    <ul>
+      <li>XOOPS 2.0 以降に対応</li>
+      <li>altsys モジュールがあれば利用する</li>
+    </ul>
+  </dd>
   <dt>2008/02/25 update 0.90</dt>
   <dd>
     <ul>
@@ -251,6 +258,6 @@ ul#changes { text-indent: 1em;}
   本モジュールは、スクリプトアップデートで開発・配布されている。</p>
 
 <hr>
-<div>$Id: help.html,v 1.16 2008/02/25 15:14:04 nobu Exp $</div>
+<div>$Id: help.html,v 1.17 2010/01/09 07:44:28 nobu Exp $</div>
 </body>
 </html>
